adding preprocessing to merge file

--- a/merge_csv.ipynb
+++ b/merge_csv.ipynb
@@ -148,6 +148,129 @@
     "\n",
     "print(f\"Merged files into {final_merged_filename}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now for training data preprocessing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "#########################################################\n",
+    "# This script extracts the top 20% and bottom 20% of the\n",
+    "# dataset based on the 'balance' column and assigns a label\n",
+    "# of 1 to the top 20% and 0 to the bottom 20%. The new\n",
+    "# dataset is arranged by time and saved to a CSV file.\n",
+    "#########################################################\n",
+    "\n",
+    "\n",
+    "def extract_training_data(file_path):\n",
+    "    # Read the CSV file\n",
+    "    df = pd.read_csv(file_path)\n",
+    "\n",
+    "    # Sort the DataFrame by the 'balance' column in descending order\n",
+    "    df_sorted = df.sort_values(by='balance', ascending=False)\n",
+    "\n",
+    "    # Determine the number of rows that constitute the top 20% and bottom 20%\n",
+    "    top_20_count = int(len(df_sorted) * 0.2)\n",
+    "    bottom_20_count = int(len(df_sorted) * 0.2)\n",
+    "\n",
+    "    # Extract the top 20% and bottom 20% of the sorted DataFrame\n",
+    "    top_20_df = df_sorted.head(top_20_count)\n",
+    "    bottom_20_df = df_sorted.tail(bottom_20_count)\n",
+    "\n",
+    "    # Assign label 1 to the top 20% and label 0 to the bottom 20%\n",
+    "    top_20_df['label'] = 1\n",
+    "    bottom_20_df['label'] = 0\n",
+    "\n",
+    "    # Combine the top and bottom DataFrames\n",
+    "    combined_df = pd.concat([top_20_df, bottom_20_df])\n",
+    "\n",
+    "    # Sort the combined DataFrame by the 'time' column\n",
+    "    combined_df = combined_df.sort_values(by='time')\n",
+    "\n",
+    "    # Ensure 'label' column is the penultimate column and 'decision' is the last column\n",
+    "    cols = list(combined_df.columns)\n",
+    "    cols.remove('label')\n",
+    "    cols.insert(-1, 'label')\n",
+    "    combined_df = combined_df[cols]\n",
+    "\n",
+    "    # Save the new dataset to a CSV file\n",
+    "    combined_df.to_csv('new_dataset.csv', index=False)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    if len(sys.argv) != 2:\n",
+    "        print(\"Usage: python extract_training_data.py <file_path>\")\n",
+    "    else:\n",
+    "        file_path = sys.argv[1]\n",
+    "        extract_training_data(file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import boto3\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import os\n",
+    "\n",
+    "#########################################################\n",
+    "# This script preprocesses the data by dropping the 'type'\n",
+    "# column, mapping the 'decision' column to 1 and 0, and\n",
+    "# performing MinMax scaling. The preprocessed data is saved\n",
+    "# to a CSV file and optionally uploaded to an S3 bucket.\n",
+    "#########################################################\n",
+    "\n",
+    "\n",
+    "\n",
+    "def preprocess_data(input_path, output_path, bucket_name):\n",
+    "    # Load data\n",
+    "    data = pd.read_csv(input_path)\n",
+    "    \n",
+    "    # Drop 'type' column and NaNs\n",
+    "    data.drop(columns=['type'], inplace=True)\n",
+    "    data.dropna(inplace=True)\n",
+    "    \n",
+    "    # Map 'decision' column\n",
+    "    data['decision'] = data['decision'].map({'backer': 1, 'layer': 0})\n",
+    "    \n",
+    "    # MinMax Scaling\n",
+    "    scaler = MinMaxScaler()\n",
+    "    scaled_data = scaler.fit_transform(data)\n",
+    "    data = pd.DataFrame(scaled_data, columns=data.columns)\n",
+    "    \n",
+    "    # Save preprocessed data\n",
+    "    output_file = os.path.join(output_path, 'preprocessed_data.csv')\n",
+    "    data.to_csv(output_file, index=False)\n",
+    "    \n",
+    "    # Upload to S3\n",
+    "    s3 = boto3.client('s3')\n",
+    "    s3.upload_file(output_file, bucket_name, 'preprocessed-output/preprocessed_data.csv')  # Ensure this path is correct\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    import argparse\n",
+    "    \n",
+    "    parser = argparse.ArgumentParser()\n",
+    "    parser.add_argument('--input-path', type=str, required=True)\n",
+    "    parser.add_argument('--output-path', type=str, required=True)\n",
+    "    parser.add_argument('--bucket-name', type=str, required=True)\n",
+    "    \n",
+    "    args = parser.parse_args()\n",
+    "    preprocess_data(args.input_path, args.output_path, args.bucket_name)"
+   ]
   }
  ],
  "metadata": {
